# TRPG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build_debug.ps1  src_stats.py
resources/: convert_font.py
src/: Game.cpp  Game.h  main.cpp
src/Components/: Collider.cpp  Collider.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Size.cpp  Size.h
src/Core/: Config.h  GameTypes.cpp  GameTypes.h  GlobalFunctions.cpp  GlobalFunctions.h
src/Core/Renderer/: BitmapFont.cpp  BitmapFont.h  Color.cpp  Color.h  Renderable.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/Entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
src/Items/: DropTable.cpp  DropTable.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h
src/UI/: GameGUI.cpp  GameGUI.h
src/World/: ResourceWorldObject.cpp  ResourceWorldObject.h  World.cpp  World.h  WorldObject.cpp  WorldObject.h
